# oddvoices

./: .gitattributes  .gitignore  .pre-commit-config.yaml  README.md  STE-049-labels.txt  corpus.py  diphone.py  frontend.py  main.py  music.json  mypy.ini  phonetics.py  phonology.py  setup.py  synth.py  synth2.py  todo.txt  words.txt  words2.txt  words2_shuffled.txt
.github/workflows/: python-package.yml
example/: example.mid  jabberwocky.json  jabberwocky_octave.json  music.json
liboddvoices/: .gitattributes  CMakeLists.txt
liboddvoices/example/: music.json  too_short.json
liboddvoices/frontend/: .gitattributes  main.cpp
liboddvoices/src/: liboddvoices.cpp  liboddvoices.hpp
liboddvoices/test/: catch.hpp  test.cpp
nt/: labels.txt
nwh/: database.json  labels.txt
python/oddvoices/: corpus.py  frontend.py  g2p.py  midi_frontend.py  phonology.py  synth.py  utils.py
src/oddvoices/: corpus.py  frontend.py  synth.py  synth2.py  utils.py
tests/: common.py  test_corpus.py  test_cpp_vs_python.py  test_frontend.py  test_g2p.py  test_integration.py
tests/compiled-voices/: nt.voice  quake.voice
voices/cicada/: database.json  labels.txt
voices/nt/: database.json  labels.txt
voices/quake/: labels.txt
wordlist/: words.txt
